# Taiji-scATAC-seq

./: README.md  Taiji-scATAC-seq.cabal  stack.yaml
app/: Main.hs
benchmarks/: bench.hs
src/Taiji/Pipeline/SC/: ATACSeq.hs
src/Taiji/Pipeline/SC/ATACSeq/: Functions.hs  Types.hs
src/Taiji/Pipeline/SC/ATACSeq/Functions/: Align.hs  CallPeak.hs  ChromVar.hs  Cicero.hs  Clustering.hs  DR.hs  Diff.hs  Feature.hs  Internal.hs  Motif.hs  Preprocess.hs  QC.hs  Quantification.hs  SnapTools.hs  Spectral.hs  Subclustering.hs  Utils.hs
src/Taiji/Pipeline/SC/ATACSeq/Functions/Clustering/: DiffusionMap.hs  LDA.hs  LSA.hs  SnapTools.hs  Utils.hs
src/Taiji/Pipeline/SC/ATACSeq/Functions/DR/: DiffusionMap.hs  LSA.hs  SnapTools.hs
src/Taiji/Pipeline/SC/ATACSeq/Functions/Feature/: Gene.hs  Motif.hs  Peak.hs  Window.hs
src_foreign/: sc-utils.py
src_foreign/sc_utils/: setup.py
src_foreign/sc_utils/sc_utils/: Diff.py  DiffusionMap.py  Doublet.py  LSI.py  Spectral.py  Utils.py  __init__.py  ae.py  command_line.py
tests/: Test.hs
