name:                Taiji-scATAC-seq
version:             0.2.1
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2017-2019 Kai Zhang
category:            Bio
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Flag exe
  Description: Build executable
  Default:     False

library
  ghc-options:         -Wall
                       -fno-warn-partial-type-signatures
                       -fno-warn-unticked-promoted-constructors
  hs-source-dirs:      src

  exposed-modules:     Taiji.Pipeline.SC.ATACSeq
                       Taiji.Pipeline.SC.ATACSeq.Functions
                       Taiji.Pipeline.SC.ATACSeq.Functions.Preprocess
                       Taiji.Pipeline.SC.ATACSeq.Functions.Align
                       Taiji.Pipeline.SC.ATACSeq.Functions.Feature
                       Taiji.Pipeline.SC.ATACSeq.Functions.Feature.Window
                       Taiji.Pipeline.SC.ATACSeq.Functions.Feature.Peak
                       Taiji.Pipeline.SC.ATACSeq.Functions.Feature.Gene
                       Taiji.Pipeline.SC.ATACSeq.Functions.Feature.Motif
                       Taiji.Pipeline.SC.ATACSeq.Functions.Clustering
                       Taiji.Pipeline.SC.ATACSeq.Functions.QC
                       Taiji.Pipeline.SC.ATACSeq.Functions.Diff
                       Taiji.Pipeline.SC.ATACSeq.Functions.Utils
                       Taiji.Pipeline.SC.ATACSeq.Types

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , binary
                     , bio-pipelines
                     , bytestring
                     , bytestring-lexing
                     , bio-experiments
                     , bioinformatics-toolkit >= 0.9.0
                     , conduit-extra
                     , clustering
                     , case-insensitive
                     , containers
                     , conduit
                     , deepseq
                     , data-default
                     , data-ordlist
                     , double-conversion
                     , filepath
                     , HsHTSLib >= 1.9.2
                     , IntervalMap
                     , jmacro
                     , mtl
                     , matrices
                     , SciFlow >= 0.7.0
                     , template-haskell
                     , text
                     , temporary
                     , transformers-base
                     , mwc-random
                     , singletons >= 2.5
                     , split
                     , shelly
                     , statistics >= 0.15.0.0
                     , vector
                     , vector-algorithms
                     , unordered-containers
                     , Taiji-utils
  default-language:    Haskell2010

executable taiji-scatac-seq
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      app
  main-is:             Main.hs

  ghc-options:         -threaded -Wall

  build-depends:       base >=4 && <5
                     , aeson
                     , binary
                     , bio-pipelines
                     , data-default
                     , SciFlow >=0.7.0
                     , SciFlow-app
                     , Taiji-scATAC-seq
                     , yaml

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/Taiji-ATAC-seq
