name:                Taiji-scATAC-seq
version:             0.2.1
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2017-2021 Kai Zhang
category:            Bio
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:
  data/gencode.gtf.gz
  data/fragments.bed.gz

Flag exe
  Description: Build executable
  Default:     False

library
  ghc-options:         -Wall
                       -fno-warn-partial-type-signatures
                       -fno-warn-unticked-promoted-constructors
  hs-source-dirs:      src

  exposed-modules:     Taiji.Pipeline.SC.ATACSeq
                       Taiji.Pipeline.SC.ATACSeq.Functions
                       Taiji.Pipeline.SC.ATACSeq.Functions.Align
                       Taiji.Pipeline.SC.ATACSeq.Functions.Spectral
                       Taiji.Pipeline.SC.ATACSeq.Functions.Clustering
                       Taiji.Pipeline.SC.ATACSeq.Functions.Subclustering
                       Taiji.Pipeline.SC.ATACSeq.Functions.Feature
                       Taiji.Pipeline.SC.ATACSeq.Functions.Feature.Window
                       Taiji.Pipeline.SC.ATACSeq.Functions.Feature.Peak
                       Taiji.Pipeline.SC.ATACSeq.Functions.Feature.Gene
                       Taiji.Pipeline.SC.ATACSeq.Functions.Feature.Motif
                       Taiji.Pipeline.SC.ATACSeq.Functions.Preprocess
                       Taiji.Pipeline.SC.ATACSeq.Functions.QC
                       Taiji.Pipeline.SC.ATACSeq.Functions.Utils
                       Taiji.Pipeline.SC.ATACSeq.Types

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , binary
                     , bio-pipelines
                     , bytestring
                     , bytestring-lexing
                     , bio-experiments
                     , bioinformatics-toolkit >= 0.9.3.1
                     , conduit-extra
                     , clustering
                     , case-insensitive
                     , containers
                     , conduit
                     , deepseq
                     , data-default
                     , data-ordlist
                     , double-conversion
                     , filepath
                     , hashable
                     , HsHTSLib >= 1.9.2
                     , IntervalMap
                     , jmacro
                     , mtl
                     , matrices
                     , parallel
                     , SciFlow >= 0.7.2
                     , template-haskell
                     , text
                     , temporary
                     , transformers-base
                     , mwc-random
                     , stm-conduit
                     , singletons >= 3.0
                     , singletons-base
                     , split
                     , shelly
                     , statistics >= 0.15.0.0
                     , vector
                     , vector-algorithms
                     , unordered-containers
                     , zlib
                     , Taiji-utils
  default-language:    Haskell2010

executable taiji-scatac-seq
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      app
  main-is:             Main.hs

  ghc-options:         -threaded -Wall

  build-depends:       base >=4 && <5
                     , aeson
                     , binary
                     , bio-pipelines
                     , data-default
                     , SciFlow >=0.7.0
                     , SciFlow-app
                     , Taiji-scATAC-seq
                     , yaml

  default-language:    Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: tests.hs
  other-modules:
    Test

  default-language:    Haskell2010
  build-depends:
      base
    , bioinformatics-toolkit >= 0.9.3.1
    , bytestring
    , conduit
    , conduit-extra
    , tasty
    , tasty-hunit
    , Taiji-utils
    , Taiji-scATAC-seq

source-repository head
  type:     git
  location: https://github.com/githubuser/Taiji-ATAC-seq

benchmark bench
  type: exitcode-stdio-1.0
  --ghc-options: -threaded -rtsopts -with-rtsopts=-N
  ghc-options: -threaded
  main-is: benchmarks/bench.hs
  default-language:    Haskell2010
  build-depends:
      base
    , bioinformatics-toolkit >= 0.9.3.1
    , bytestring
    , criterion
    , conduit
    , conduit-extra
    , parallel
    , Taiji-utils
    , Taiji-scATAC-seq